# Narrative-Forge-obsidian

./: .gitignore  README.md  SYSTEM_PROMPT.md  manifest.json  pyproject.toml  versions.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-03-plugin-performance-improvements.md
docs/superpowers/specs/: 2026-05-03-plugin-performance-improvements-design.md
obsidian-plugin/: README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  versions.json  vitest.config.ts
obsidian-plugin/src/: agent.ts  api.ts  backend.ts  book.ts  chat.ts  context-menu.ts  database.ts  decorations.ts  event-modal.ts  importer.ts  local_server.ts  main.ts  parser.ts  pending_decorations.ts  pending_edits.ts  session.ts  settings.ts  sidebar.ts  timeline.ts  tools.ts
obsidian-plugin/tests/: agent.test.ts  importer.test.ts  parser.test.ts  pending_edits.test.ts  sanity.test.ts  tool_listings.test.ts  tools.test.ts
obsidian-plugin/tests/__mocks__/: database.ts  obsidian.ts  parser.ts
src/narrative_os/: __init__.py  __main__.py  agent.py  embeddings.py  importer.py  mcp_server.py  parser.py  search.py  server.py  tools.py  vectorstore.py
tests/: test_importer.py  test_parser.py  test_search.py
