[project]
name = "narrative-forge"
version = "0.4.0"
description = "AI-powered writing assistant for fiction authors"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27.0",
]

[project.scripts]
narrative-forge = "narrative_os.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narrative_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
